1. Метод .of [#408982]